# Hextech

./: .env.example  .gitignore  HextechAssistant.spec  HextechAssistantText.spec  HextechOverlay.spec  README.md  pyproject.toml
scripts/: build_windows.ps1  build_windows_overlay.ps1  build_windows_text.ps1
src/aiproject/: __init__.py  config.py  desktop.py  desktop_overlay.py  desktop_text.py  graph.py  gui.py  lcu.py  llms.py  main.py  matcher.py  nodes.py  scraper.py  state.py  text_index.py  vectorstore.py  vision.py  web.py
src/aiproject/static/: app.js  index.html  overlay.css  overlay.html  overlay.js  styles.css
