[project]
name = "aiproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "curl-cffi>=0.15.0",
    "dashscope>=1.26.2",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.0.5",
]

[project.scripts]
hextech = "aiproject.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aiproject"]
