[project]
name = "aiproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "curl-cffi>=0.15.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-deepseek>=1.1.0",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.0.5",
    "pywebview>=6.1",
]

[project.scripts]
hextech = "aiproject.main:main"
hextech-desktop = "aiproject.desktop:main"
hextech-desktop-text = "aiproject.desktop_text:main"
hextech-gui = "aiproject.gui:main"
hextech-web = "aiproject.web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aiproject"]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
